--- a/src/main/webapp/resources/css/boardInsert.css
+++ b/src/main/webapp/resources/css/boardInsert.css
@@ -15,21 +15,6 @@ body {
     padding: 0;
 }
 
-/* a 태그 스타일 제거 */
-a:link,
-a:visited {
-    color: inherit; /* 링크 색상을 상위 요소에서 상속 받음 */
-    text-decoration: none; /* 밑줄 제거 */
-}
-
-/* 클릭한 후 색상 변경이나 효과 제거 */
-a:active,
-a:hover {
-    color: inherit;
-    text-decoration: none;
-}
-
-
 #wrap {
     max-width: 960px;
     margin: 100px auto;
@@ -37,7 +22,6 @@ a:hover {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-     text-align: center; 
 }
 
 .searchs {
@@ -63,7 +47,7 @@ select, input[type="text"], button {
 }
 
 button {
-    background-color: #cbe86b;
+    background-color: #428bca;
     color: #fff;
     cursor: pointer;
 }
@@ -76,13 +60,13 @@ table {
 }
 
 table th, table td {
-    border: 1px solid #f2e9e1;
+    border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
 }
 
 table th {
-    background-color: #cbe86b;
+    background-color: #428bca;
     color: #fff;
 }
 
@@ -96,29 +80,32 @@ table th {
     display: inline-block;
     padding: 5px 10px;
     margin-right: 5px;
-    border: 1px solid #f2e9e1;
+    border: 1px solid #ddd;
     border-radius: 3px;
     color: #333;
 }
 
 .pageNation .firstB, .pageNation .lastB {
-    background-color: #cbe86b;
+    background-color: #428bca;
     color: #fff;
 }
 
 .pageNation .ltB, .pageNation .gtB {
-    background-color: #f2e9e1;
+    background-color: #ddd;
 }
 
 .pageNation strong {
-    background-color: #cbe86b;
+    background-color: #428bca;
     color: #fff;
     padding: 5px 10px;
     margin-right: 5px;
-    border: 1px solid #f2e9e1;
+    border: 1px solid #ddd;
     border-radius: 3px;
 }
 
+.boardPage-link {
+	
+}
+
 .home-link {
-	margin-top: 20px;
 }
