--- a/src/main/webapp/resources/css/boardDetail.css
+++ b/src/main/webapp/resources/css/boardDetail.css
@@ -31,6 +31,9 @@ li {
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 8px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 /* 테이블 스타일 수정 */
